--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
 
                                     
                                     <li><a href="">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
-                                    <li><a href="blog.html">Blog</a>
-                                        <ul class="submenu">
+                                    <li><a href="#">Courses</a></li>
+                                    <li><a href="#">Pricing</a></li>
+                                    <li><a href="#">Gallery</a></li>
+                                    <li><a href="#">Blog</a>
+                                        <!-- <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
                                             <li><a href="blog_details.html">Blog Details</a></li>
                                             <li><a href="elements.html">Elements</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>          
@@ -604,8 +603,7 @@
                             <!-- social -->
                             <div class="footer-social mt-30 wow fadeInUp" data-wow-duration="3s" data-wow-delay=".8s">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
                             </div>
                         </div>
                     </div>
