--- a/dance.html
+++ b/dance.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/themify-icons.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
+    <link rel="stylesheet" href="assets/css/tables.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="black-bg">
@@ -39,7 +40,7 @@
     <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
-        <div class="header-area header-transparent">
+        <div class="header-area dance header-transparent">
             <div class="main-header header-sticky">
                 <div class="container-fluid">
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
@@ -52,10 +53,8 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="courses.html">DaHouse Crossfit</a></li>
+                                    <li><a href="dance.html">DaHouse Dance</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
@@ -123,6 +122,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Danza Africana</a></h5>
+                            <p>Musicos en Directo.</p>
                             <p>Descripción.</p>
                         </div>
                     </div>
@@ -152,15 +152,16 @@
                         </div>
                     </div>
                 </div>
-                <!-- DA HOUSE ABSOLUTA -->
+                <!-- DA HOUSE -->
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
                             <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="DA HOUSE ABSOLUTA">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="#">DA HOUSE ABSOLUTA</a></h5>
-                            <p>Descripción.</p>                        </div>
+                            <h5><a href="#">DA HOUSE</a></h5>
+                            <p>ABSOLUTA y PREMIUM</p>   
+                            <p>Grupos de Competición.</p>                        </div>
                     </div>
                 </div>
                 <!-- Comercial Dance Avanzado  -->
@@ -183,9 +184,8 @@
                             <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Locker Kids">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="#">Locker</a></h5>
-                            <p>Kids</p>
-                            <p>Descripción.</p>                        
+                            <h5><a href="#">Locker Kids</a></h5>
+                            <p>Grupo de Competición niños.</p>                        
                         </div>
                     </div>
                 </div>
@@ -227,14 +227,77 @@
                         </div>
                     </div>
                 </div>
-                <!-- Salsa Línea -->
+                <!-- Salsa -->
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
                             <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="#">Salsa Línea</a></h5>
+                            <h5><a href="#">Salsa</a></h5>
+                            <p>Normal, Fusion, Chicas, Linea.</p>   
+                            <p>Descripción.</p>                        
+                        </div>
+                    </div>
+                </div>
+                <!-- HELLS CLASS -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-cat text-center mb-30">
+                        <div class="cat-icon">
+                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">HELLS CLASS</a></h5>
+                            <p>Basico y Avanzado</p>
+                            <p>Descripción.</p>                        
+                        </div>
+                    </div>
+                </div>
+                <!-- Danza del Vientre -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-cat text-center mb-30">
+                        <div class="cat-icon">
+                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">Danza del Vientre</a></h5>
+                            <p>Descripción.</p>                        
+                        </div>
+                    </div>
+                </div>
+                <!-- Bachata -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-cat text-center mb-30">
+                        <div class="cat-icon">
+                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">Bachata</a></h5>
+                            <p>Parejas y estilo chicas.</p>
+                            <p>Descripción.</p>                        
+                        </div>
+                    </div>
+                </div>
+                <!-- DanceHall -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-cat text-center mb-30">
+                        <div class="cat-icon">
+                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">DanceHall Queen</a></h5>
+                            <p>Descripción.</p>                        
+                        </div>
+                    </div>
+                </div>
+                <!-- Iris -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-cat text-center mb-30">
+                        <div class="cat-icon">
+                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="#">IRIS</a></h5>
                             <p>Descripción.</p>                        
                         </div>
                     </div>
@@ -256,7 +319,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Yoga</a></h5>
-                            <p>Encuentra tu equilibrio con posturas y respiración consciente.</p>
+                            <p>Descripción.</p>  
                         </div>
                     </div>
                 </div>
@@ -268,7 +331,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Pilates MAT</a></h5>
-                            <p>Fortalece y tonifica con movimientos precisos.</p>
+                            <p>Descripción.</p>  
                         </div>
                     </div>
                 </div>
@@ -280,7 +343,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Animal Flow</a></h5>
-                            <p>Movimientos inspirados en animales para flexibilidad.</p>
+                            <p>Descripción.</p>  
                         </div>
                     </div>
                 </div>
@@ -292,7 +355,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Zumba</a></h5>
-                            <p>Baila y quema calorías al ritmo de música alegre.</p>
+                            <p>Descripción.</p>  
                         </div>
                     </div>
                 </div>
@@ -304,7 +367,7 @@
     
     <!-- Services End -->
     <!-- Traning categories Start -->
-    <section class="traning-categories black-bg">
+    <!-- <section class="traning-categories black-bg">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-6 col-lg-6">
@@ -337,19 +400,132 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Traning categories End-->
-    <!--? video_start -->
-    <div class="video-area section-bg2 d-flex align-items-center"  data-background="assets/img/gallery/Imagen_Prueba_Dance.pngvideo-bg.png">
-        <div class="container">
-            <div class="video-wrap position-relative">
-                <div class="video-icon" >
-                    <a class="popup-video btn-icon" href="https://www.youtube.com/watch?v=up68UAfH0d0"><i class="fas fa-play"></i></a>
+
+    <!-- Table Fees -->
+    <section class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="section-tittle text-center mb-55">
+                    <h2>Tarifas Disponibles</h2>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- video_end -->
+        <!-- Tabla Estilo -->
+        <div class="table-container">
+            <h3>Estilo</h3>
+            <table class="tarifa-table">
+                <tbody>
+                    <tr>
+                        <td>1h semana</td>
+                        <td>40€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>1'5h semana</td>
+                        <td>50€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>2h semana</td>
+                        <td>60€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>Danza Africana</td>
+                        <td>55€ al mes (sin matrícula)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Tabla Fusiones -->
+        <div class="table-container">
+            <h3>Fusiones</h3>
+            <table class="tarifa-table">
+                <tbody>
+                    <tr>
+                        <td>1 Estilo 1h + 1 Estilo 1h</td>
+                        <td>65€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>1 Estilo 1h + 1 Estilo 1'5h</td>
+                        <td>70€ al mes (sin matrícula)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Tabla Bonos -->
+        <div class="table-container">
+            <h3>Bonos</h3>
+            <table class="tarifa-table">
+                <tbody>
+                    <tr>
+                        <td>Bono 5 horas (2 meses)</td>
+                        <td>50€</td>
+                    </tr>
+                    <tr>
+                        <td>Bono 10 horas (2 meses)</td>
+                        <td>100€</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Tabla Sueltas -->
+        <div class="table-container">
+            <h3>Sueltas</h3>
+            <table class="tarifa-table">
+                <tbody>
+                    <tr>
+                        <td>Suelta 1h</td>
+                        <td>12€</td>
+                    </tr>
+                    <tr>
+                        <td>Suelta 1'5h</td>
+                        <td>17€</td>
+                    </tr>
+                    <tr>
+                        <td>Suelta Videoclass</td>
+                        <td>20€</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Tabla Yoga, Pilates, Animal Flow y Zumba -->
+        <div class="table-container">
+            <h3>Yoga, Pilates, Animal Flow, Zumba</h3>
+            <table class="tarifa-table">
+                <tbody>
+                    <tr>
+                        <td>1 vez x semana</td>
+                        <td>40€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>2 veces x semana</td>
+                        <td>65€ al mes (sin matrícula)</td>
+                    </tr>
+                    <tr>
+                        <td>1 Clase Suelta</td>
+                        <td>15€</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Información adicional (Descuentos) -->
+        <div class="info-box">
+            <h4>20% DESC. HERMANOS / PADRES</h4>
+            <p>*DESCUENTO NO APLICABLE A LA TARIFA ILIMITADA*</p>
+            <p>*DESCUENTO SE APLICA A LA TARIFA MAS BAJA*</p>
+            <br>
+            <p>3 MIEMBROS DE LA MISMA FAMILIA, DESCUENTO 10% DEL TOTAL</p>
+            <p>4 MIEMBROS DE LA MISMA FAMILIA 1 GRATIS</p>
+        </div>
+    </section>
+    <!-- Table Fees End-->
+
+    
     <!-- ? services-area -->
     <section class="services-area">
         <div class="container">
