DaHouse Dance Prototype

--- a/dance.html
+++ b/dance.html
@@ -404,7 +404,7 @@
     <!-- Traning categories End-->
 
     <!-- Table Fees -->
-    <section class="container">
+    <section class="custom-container">
         <div class="row">
             <div class="col-xl-12">
                 <div class="section-tittle text-center mb-55">
