--- a/dance.html
+++ b/dance.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Africana">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Africana"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Danza Africana</a></h5>
@@ -131,7 +131,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Urbana">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Urbana"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Danza Urbana</a></h5>
@@ -144,7 +144,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Flamenco Puro">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Flamenco Puro"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Flamenco Puro</a></h5>
@@ -156,7 +156,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="DA HOUSE ABSOLUTA">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="DA HOUSE ABSOLUTA"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">DA HOUSE</a></h5>
@@ -168,7 +168,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Comercial Dance">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Comercial Dance"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Comercial Dance</a></h5>
@@ -181,7 +181,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Locker Kids">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Locker Kids"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Locker Kids</a></h5>
@@ -193,7 +193,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Reggaeton Urbano">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Reggaeton Urbano"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Reggaeton Urbano</a></h5>
@@ -206,7 +206,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="VXN Workout">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="VXN Workout"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">VXN Workout</a></h5>
@@ -218,7 +218,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Contemporánea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Danza Contemporánea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Danza Contemporánea</a></h5>
@@ -231,7 +231,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Salsa</a></h5>
@@ -244,7 +244,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">HELLS CLASS</a></h5>
@@ -257,7 +257,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Danza del Vientre</a></h5>
@@ -269,7 +269,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Bachata</a></h5>
@@ -282,7 +282,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">DanceHall Queen</a></h5>
@@ -294,7 +294,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Salsa Línea"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">IRIS</a></h5>
@@ -315,7 +315,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Yoga">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Yoga"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Yoga</a></h5>
@@ -327,7 +327,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Pilates MAT">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Pilates MAT"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Pilates MAT</a></h5>
@@ -339,7 +339,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Animal Flow">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Animal Flow"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Animal Flow</a></h5>
@@ -351,7 +351,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-cat text-center mb-30">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Zumba">
+                            <!-- <img src="assets/img/gallery/Imagen_Prueba_Dance.png" alt="Zumba"> -->
                         </div>
                         <div class="cat-cap">
                             <h5><a href="#">Zumba</a></h5>
