--- a/dance.html
+++ b/dance.html
@@ -96,6 +96,35 @@
         </div>
     </div>    
     <!-- Hero End -->
+
+    <!--? About Area-2 Start -->
+    <section class="about-area2 fix pb-padding pt-50 pb-80">
+        <div class="support-wrapper align-items-center">
+            <div class="right-content2 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s" >
+                <!-- img -->
+                <div class="right-img">
+                    <img src="assets/img/gallery/about.png" alt="">
+                </div>
+            </div>
+            <div class="left-content2">
+                <!-- section tittle -->
+                <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div class="front-text">
+                        <h2 class="">About Our Dance Program</h2>
+                        <p>
+                            Our Dance program is designed to help you achieve peak fitness through high-intensity, 
+                            functional movements. Led by certified coaches, our classes combine strength training, 
+                            cardio, and skill work to improve your overall fitness, strength, and endurance. 
+                            Suitable for all fitness levels, our program focuses on personalized coaching 
+                            and a supportive community environment.
+                        </p>
+                        <a href="courses.html" class="border-btn">My Courses</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About Area End -->
     <!--? Team -->
     <section class="team-area fix section-padding30">
         <div class="container">
